[package]
name = "btc-psql-insertions"
version = "0.1.0"
authors = ["Ray Diaz <rdiaz@tendrilinc.com>"]

[dependencies]
postgres = "0.15"
crossbeam = "0.7.2"
crossbeam-channel = "0.3.9"
crossbeam-utils = "0.6.6"
flate2 = "1.0"
futures = "0.1.25"
quicli = "0.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_bytes = "0.10.4"

